--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -74,17 +74,20 @@
         <h1>Contactate con nosotros</h1>
         <form>
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                <label for="exampleInputPassword1" class="form-label">Nombre y apellido</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <label for="exampleInputPassword1" class="form-label">Teléfono</label>
                 <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">E-Mail</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                <label class="form-check-label" for="exampleCheck1">Quiero recibir más información</label>
             </div>
             <!--<select class="form-select" aria-label="Default select example">
                 <option selected>Open this select menu</option>
@@ -92,7 +95,7 @@
                 <option value="2">Two</option>
                 <option value="3">Three</option>
             </select>-->
-            <button type="submit" class="btn boton">Submit</button>
+            <button type="submit" class="btn boton">Enviar</button>
         </form>
     </section>
     <iframe class="iframe-map"
@@ -105,7 +108,7 @@
         <img class="img-size" src="../assets/so_white.svg" width="200px" alt="Logo Serviobras">
         <p class="font-color-blanco font-size-footer">Todos los derechos reservados © 2023</p>
     </footer>
-    <script> src= "../scripts/bootstrap.bundle.min"</script>
+    <script> src = "../scripts/bootstrap.bundle.min"</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
