--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,7 +20,7 @@
 <body>
     <div class="grid-container">
         <header class="header">
-            <a href="index.html" target="_self">
+            <a href="../index.html" target="_self">
                 <img class="img-size" src="../assets/so_white.svg" width="250px" alt="Logo Serviobras">
             </a>
             <ul>
@@ -100,10 +98,10 @@
         </section>
         <aside class="aside">
             <div class="banner">
-                <a href="#" target="_self"><img src="../assets/banner300x600.png" alt="Banner lateral"></a>
+                <a href="#" target="_self"><img src="../assets/banner2.jpg" alt="Banner lateral"></a>
             </div>
             <div class="banner">
-                <a href="#" target="_self"><img src="../assets/banner300x600.png" alt="Banner lateral"></a>
+                <a href="#" target="_self"><img src="../assets/banner1.jpg" alt="Banner lateral"></a>
             </div>
         </aside>
         <footer class="footer">
@@ -111,10 +109,6 @@
             <p class="font-color-blanco font-size-footer">Todos los derechos reservados © 2023</p>
         </footer>
     </div>
-    <script> src= "./scripts/bootstrap.bundle.min"</script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
