--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,9 +70,16 @@
             </form>
         </div>-->
     </main>
-    <section class="form">
-        <h1>Contactate con nosotros</h1>
-        <form>
+    <section class="form_main">
+        <div class="form_main--box">
+            <h1>Contactate con nosotros</h1>
+            <p class="form_main--text">hola@revistaserviobras.com.ar<br>
+                wwww.revistaserviobras.com.ar<br>
+                11 6512 3630</p>
+            <p>Dejanos tu mensaje para anunciar, consultar y resolver cualquier tipo de inconveniente con nuestra
+                tienda</p>
+        </div>
+        <form class="form_main--box">
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Nombre y apellido</label>
                 <input type="password" class="form-control" id="exampleInputPassword1">
@@ -97,11 +104,11 @@
             </select>-->
             <button type="submit" class="btn boton">Enviar</button>
         </form>
-    </section>
-    <iframe class="iframe-map"
-        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13148.118863074014!2d-58.520116349999995!3d-34.527475100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1694896508440!5m2!1ses-419!2sar"
-        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+        <iframe class="form__map--iframe"
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13148.118863074014!2d-58.520116349999995!3d-34.527475100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1694896508440!5m2!1ses-419!2sar"
+            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
 
     <!--Footer-->
     <footer class="footer">
