--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -55,11 +55,11 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <main class="main">
-        <article>
+    <main class="main__secciones">
+        <article class="main__secciones--texto">
             <h1>SOMOS LA GUÍA DE CONSULTA DE LA CONSTRUCCIÓN, PARA QUE TODOS PUEDAN ENCONTRAR LOS PROVEEDORES PARA
                 CONSTRUIR, REMODELAR, DECORAR O EQUIPAR SU CASA</h1>
-            <p class="font-margin-left">Revista Serviobras nación en 2001 como una revista en papel que llevara
+            <p>Revista Serviobras nación en 2001 como una revista en papel que llevara
                 información útil sobre
                 proveedores, materiales y productos para el sector de la construcción. A medida que internet fue
                 avanzando en la vidad cotidiana, nuestra guía fue reconvirtiendose en un medio digital y sobre todo,
@@ -68,7 +68,7 @@
                 que todo esto sea posible. Conocelos un poco más.</p>
         </article>
     </main>
-    <section class="section">
+    <section class="main__secciones">
         <div class="staff-box">
             <img src="../assets/staff1.png" width="250px" alt="Foto staff 1">
             <h2 class="font-color-rojo text-align-center">CARLA ALDERETE</h2>
