--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -55,30 +55,95 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <section class="novedades">
-        <article class="novedades-box">
-            <h2>Qué es el microcemento y cómo se aplica</h2>
-            <h3>EL MICROCEMENTO ES UN REVESTIMIENTO DECORATIVO CONTINUO QUE SE APLICA SOBRE SUPERFICIES HORIZONTALES
-                Y VERTICALES, TANTO EN INTERIORES COMO EN EXTERIORES. SE COMPONE DE UNA MEZCLA DE CEMENTO, RESINAS Y
-                ADITIVOS, Y SE CARACTERIZA POR SER MUY FINO Y TENER UN ACABADO LISO Y UNIFORME.</h3>
-            <img src="../assets/blog_Microcemento.jpg" alt="Foto novedades microcemento">
-            <p>La aplicación del microcemento se realiza en varias capas, cada una de ellas con un espesor
-                máximo de 2-3 mm. La superficie sobre la que se va a aplicar debe estar limpia, seca y libre de
-                polvo, grasa y restos de otros materiales. Si se trata de una superficie ya existente, esta debe
-                estar preparada con una imprimación específica para el microcemento. La aplicación del
-                microcemento se realiza en varias capas, cada una de ellas con un espesor máximo de 2-3 mm. La
-                superficie sobre la que se va a aplicar debe estar limpia, seca y libre de polvo, grasa y restos
-                de otros materiales. Si se trata de una superficie ya existente, esta debe estar preparada con
-                una imprimación específica para el microcemento. Es ideal para cubrir superficies, entre otras,
-                de hormigón, cemento, azulejos, baldosas, yeso, pladur, metal, plástico, gres, mármol, y un
-                largo etc. Usos principales suelen ser en paredes y suelos, ya que aporta continuidad creando
-                una mayor sensación de amplitud. Su adherencia a todas las superficies hace que el sistema
-                microcemento sea ideal también para baños y cocinas, donde no habrá que retirar los antiguos
-                azulejos, puesto que la colocación puede realizarse por encima. Otro de los usos principales es
-                en el mobiliario de exteriores, gracias a la estética decorativa de su acabado y a su excelente
-                durabilidad.</p>
-        </article>
-    </section>
+    <main class="novedades__main">
+        <section>
+            <h2 class="novedades-box--titulo" text-align-center">Novedades</h2>
+        </section>
+        <section class="novedades__secciones">
+            <article class="novedades-box">
+                <h3>Qué es el microcemento y cómo se aplica</h3>
+                <h4>EL MICROCEMENTO ES UN REVESTIMIENTO DECORATIVO CONTINUO QUE SE APLICA SOBRE SUPERFICIES HORIZONTALES
+                    Y VERTICALES, TANTO EN INTERIORES COMO EN EXTERIORES. SE COMPONE DE UNA MEZCLA DE CEMENTO, RESINAS Y
+                    ADITIVOS, Y SE CARACTERIZA POR SER MUY FINO Y TENER UN ACABADO LISO Y UNIFORME.</h4>
+                <img src="../assets/blog_Microcemento.jpg" alt="Foto novedades microcemento">
+                <p>La aplicación del microcemento se realiza en varias capas, cada una de ellas con un espesor
+                    máximo de 2-3 mm. La superficie sobre la que se va a aplicar debe estar limpia, seca y libre de
+                    polvo, grasa y restos de otros materiales. Si se trata de una superficie ya existente, esta debe
+                    estar preparada con una imprimación específica para el microcemento. La aplicación del
+                    microcemento se realiza en varias capas, cada una de ellas con un espesor máximo de 2-3 mm. La
+                    superficie sobre la que se va a aplicar debe estar limpia, seca y libre de polvo, grasa y restos
+                    de otros materiales. Si se trata de una superficie ya existente, esta debe estar preparada con
+                    una imprimación específica para el microcemento. Es ideal para cubrir superficies, entre otras,
+                    de hormigón, cemento, azulejos, baldosas, yeso, pladur, metal, plástico, gres, mármol, y un
+                    largo etc. Usos principales suelen ser en paredes y suelos, ya que aporta continuidad creando
+                    una mayor sensación de amplitud. Su adherencia a todas las superficies hace que el sistema
+                    microcemento sea ideal también para baños y cocinas, donde no habrá que retirar los antiguos
+                    azulejos, puesto que la colocación puede realizarse por encima. Otro de los usos principales es
+                    en el mobiliario de exteriores, gracias a la estética decorativa de su acabado y a su excelente
+                    durabilidad.</p>
+            </article>
+            <article class="novedades-box">
+                <h3>¿Qué son las casas sustentables?</h2>
+                    <h4>LAS CASAS SUSTENTABLES SE ENMARCAN DENTRO DE UN NUEVO CONCEPTO FILOSÓFICO DE LA ARQUITECTURA
+                        COMO UN
+                        MOTOR DE IMPULSO EN LA CONSERVACIÓN DEL PLANETA. ESTOS DISEÑOS DE CASAS SUSTENTABLES HAN
+                        DEMOSTRADO
+                        QUE NO TIENEN PORQUÉ SACRIFICAR EL CONFORT EN PRO DE LA ECOLOGÍA.</h4>
+                    <img src="../assets/blog_CasasSustentables.jpg" alt="Foto novedades microcemento">
+                    <p>Los arquitectos de casas sustentables han tenido el inmenso reto de diseñar y construir
+                        edificaciones
+                        cómodas, placenteras y prácticas para sus habitantes. Pero, al mismo tiempo, han desarrollado
+                        soluciones que optimizan el uso responsable de los recursos.</p>
+                    <p>El sistema de derroche en función a la estética y sin cuidado del medio ambiente, poco a poco va
+                        quedando atrás y va dando paso a nuevas REALIDADES ARQUITECTÓNICAS. Su instrumento más tangible
+                        son
+                        las casas sustentables, una solución eficaz, eficiente y práctica.</p>
+                    <iframe width="960" height="500" src="https://www.youtube.com/embed/KCTTlakZjYI?si=nG9FCyxgKPZTK2yT"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                    <p>Pero, para que las casas sustentables puedan ser llevadas del plano a la realidad, los
+                        arquitectos y
+                        constructores han tenido que adoptar nuevas técnicas y recursos. El uso de materiales
+                        sustentables y
+                        la incorporación de nuevas visiones, han sido muy útiles.</p>
+                    <p>La perfección del uso de los recursos, el ahorro y la maximización de la energía, así como la
+                        reducción del DESPILFARRO, son nuevos paradigmas de la arquitectura.</p>
+                    <p>
+                        Del mismo modo, veremos como paulatinamente en América Latina, este concepto ha ido ganando
+                        terreno
+                        para ir desplazando a los viejos sistemas constructivos. Los avances de este tipo de casas en
+                        México, Argentina, Chile o Colombia, son ejemplos de admirar.</p>
+            </article>
+        </section>
+    </main>
+    <main class="novedades__main">
+        <section class="novedades__bullet">
+            <div class="novedades__bullets--card">
+                <img src="../assets/bullets1.png" alt="Foto staff 1">
+                <h2 class="text-align-center">ENVÍO GRATIS DESDE $10.000</h2>
+                <p class="text-align-center">Solo por estar registrado en Revista Serviobras tenés envíos gratis en
+                    miles de productos.</p>
+                <p class="text-align-center">Conocé más sobre este beneficio</p>
+            </div>
+            <div class="novedades__bullets--card">
+                <img src="../assets/bullets2.png" alt="Foto staff 1">
+                <h2 class="text-align-center">ENVÍO GRATIS DESDE $10.000</h2>
+                <p class="text-align-center">Solo por estar registrado en Revista Serviobras tenés envíos gratis en
+                    miles de productos.</p>
+                <p class="text-align-center">Conocé más sobre este beneficio</p>
+            </div>
+            </div>
+            <div class="novedades__bullets--card">
+                <img src="../assets/bullets3.png" alt="Foto staff 1">
+                <h2 class="text-align-center">ENVÍO GRATIS DESDE $10.000</h2>
+                <p class="text-align-center">Solo por estar registrado en Revista Serviobras tenés envíos gratis en
+                    miles de productos.</p>
+                <p class="text-align-center">Conocé más sobre este beneficio</p>
+            </div>
+            </div>
+        </section>
+    </main>
 
 
     <!--Footer-->
