--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -35,14 +35,32 @@
             <img src="../assets/header2.jpg" width="100%" alt="Foto header">
         </main>
         <nav class="nav">
-            <ul>
+            <div class="partners">
+                <h2 class="font-color-blanco">Estos partners confían en Serviobras</h2>
+                <div>
+                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners1.png" alt="Partners Elemental"></a>
+                </div>
+                <div>
+                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners2.png" alt="Partners Elemental"></a>
+                </div>
+                <div>
+                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners3.png" alt="Partners Elemental"></a>
+                </div>
+                <div>
+                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners4.png" alt="Partners Elemental"></a>
+                </div>
+                <div>
+                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners5.png" alt="Partners Elemental"></a>
+                </div>
+            </div>
+            <!--<ul>
                 <li><a href="#" target="_self">Proveedores de Materiales</a></li>
                 <li><a href="#" target="_self">Sector Equipar</a></li>
                 <li><a href="#" target="_self">Sector Decorar</a></li>
                 <li><a href="#" target="_self">Filtros</a></li>
                 <li><a href="#" target="_self">Medios de pago</a></li>
                 <li><a href="#" target="_self">Opciones de entrega</a></li>
-            </ul>
+            </ul> -->
         </nav>
         <section class="section-1">
             <article class="productos-box">
@@ -98,10 +116,12 @@
         </section>
         <aside class="aside">
             <div class="banner">
-                <a href="#" target="_self"><img src="../assets/banner2.jpg" alt="Banner lateral"></a>
+                <a href="https://www.suprabond.com/producto-tag/bulit/" target="_blank"><img src="../assets/banner2.jpg"
+                        alt="Banner lateral"></a>
             </div>
             <div class="banner">
-                <a href="#" target="_self"><img src="../assets/banner1.jpg" alt="Banner lateral"></a>
+                <a href="https://www.suprabond.com/producto-tag/bulit/" target="_blank"><img src="../assets/banner1.jpg"
+                        alt="Banner lateral"></a>
             </div>
         </aside>
         <footer class="footer">
