--- a/index.html
+++ b/index.html
@@ -55,34 +55,40 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <main class="main__secciones">
+    <main class="home__secciones">
         <!--Titulo principal-->
-        <article class="main__secciones--texto">
+        <article class="home__secciones--texto">
             <h1 class="font-size-56 text-align-center">TODOS LOS PROVEEDORES PARA TU OBRA ESTÁN AQUÍ​</h1>
         </article>
     </main>
     <main>
         <!--Seccion novedades-->
-        <section class="main__secciones">
-            <article class="main__secciones--botones">
-                <img class="main__secciones--flecha animacion" src="./assets/flecha2.png" alt="Foto baldosas decorativas">
-                <img class="main__secciones--foto" src="./assets/bt1.jpg" alt="Foto baldosas decorativas">
+        <section class="home__secciones">
+            <article class="home__secciones--botones">
+                <img class="home__secciones--flecha animacion" src="./assets/flecha2.png"
+                    alt="Foto baldosas decorativas">
+                <a href="./pages/tienda.html" target="_self"><img class="home__secciones--foto" src="./assets/bt1.jpg"
+                        alt="Foto baldosas decorativas"></a>
             </article>
-            <article class="main__secciones--botones">
-                <img class="main__secciones--flecha animacion" src="./assets/flecha2.png" alt="Foto baldosas decorativas">
-                <img class="main__secciones--foto" src="./assets/bt2.jpg" alt="Foto IA Asi ha cambiado la arquitectura">
+            <article class="home__secciones--botones">
+                <img class="home__secciones--flecha animacion" src="./assets/flecha2.png"
+                    alt="Foto baldosas decorativas">
+                <a href="./pages/tienda.html" target="_self"><img class="home__secciones--foto" src="./assets/bt2.jpg"
+                        alt="Foto IA Asi ha cambiado la arquitectura"></a>
             </article>
-            <article class="main__secciones--botones">
-                <img class="main__secciones--flecha animacion" src="./assets/flecha2.png" alt="Foto baldosas decorativas">
-                <a href="./pages/tienda.html" target="_self"><img class="main__secciones--foto" src="./assets/bt3.jpg" alt="Foto tendencias de color 2023"></a>
+            <article class="home__secciones--botones">
+                <img class="home__secciones--flecha animacion" src="./assets/flecha2.png"
+                    alt="Foto baldosas decorativas">
+                <a href="./pages/tienda.html" target="_self"><img class="home__secciones--foto" src="./assets/bt3.jpg"
+                        alt="Foto tendencias de color 2023"></a>
             </article>
         </section>
     </main>
-    <main class="main__clientes">
+    <main class="home__clientes">
         <section>
-            <h2 class="home__clientes--titulo text-align-center">Estos clientes confían en Revista Serviobras</h2>
+            <h2 class="home__clientes--titulo">Estos clientes confían en Revista Serviobras</h2>
         </section>
-        <section class="main__clientes">
+        <section class="home__clientes">
             <div class="home__clientes--logos">
                 <img src="./assets/clientes1.png" width="250px" alt="Foto staff 1">
             </div>
@@ -100,13 +106,13 @@
             </div>
         </section>
     </main>
-    <main>
+    <main class="home__novedades">
         <!--Seccion novedades-->
         <section>
-            <h2 class="home__clientes--titulo text-align-center">Novedades</h2>
+            <h2 class="home__novedades--titulo">Estos clientes confían en Revista Serviobras</h2>
         </section>
-        <section class="main__secciones">
-            <article class="main__secciones--cards">
+        <section class="home__secciones">
+            <article class="home__novedades--cards">
                 <img src="./assets/news1.jpg" alt="Foto baldosas decorativas">
                 <h2>BALDOSAS ACRÍLICAS DECORATIVAS PARA TU OBRA</h2>
                 <p>Un nuevo tipo de material de construcción de acabado es una baldosa sensible con fibra acrílica
@@ -116,7 +122,7 @@
                     interiores. Conocelos todos en este informe.</p>
                 <button class="btn boton">VER MÁS</button>
             </article>
-            <article class="main__secciones--cards">
+            <article class="home__novedades--cards">
                 <img src="./assets/news2.jpg" alt="Foto IA Asi ha cambiado la arquitectura">
                 <h2>IA: ASÍ HA CAMBIADO A LA ARQUITECTURA Y EL DISEÑO</h2>
                 <p>Poco después de la pandemia, SPACE10, un laboratorio de investigación y diseño que se unió con
@@ -127,7 +133,7 @@
                 </p>
                 <button class="btn boton">VER MÁS</button>
             </article>
-            <article class="main__secciones--cards">
+            <article class="home__novedades--cards">
                 <img src="./assets/news3.jpg" alt="Foto tendencias de color 2023">
                 <h2>ESTAS SON LAS TENDECIAS DE COLOR PARA 2023 EN DISEÑO</h2>
                 <p>Colores que atraen la calma, la naturaleza y la vivacidad, son algunas de las tendencias de color
@@ -137,6 +143,27 @@
                     Conocelos todos en este informe.</p>
                 <button class="btn boton">VER MÁS</button>
             </article>
+        </section>
+    </main>
+    <main>
+        <section class="home__bullets">
+            <article class="home__bullets--cards">
+                <div class="home__bullets--texto"><img class="text-align-center" src="./assets/bullets1.png" alt="Foto staff 1">
+                    <h2>ENVÍO GRATIS DESDE $10.000</h2>
+                    <p>Solo por estar registrado en Revista Serviobras tenés envíos gratis en
+                        miles de productos.</p>
+                    <p>Conocé más sobre este beneficio</p>
+                </div>
+                <div class="home__bullets--texto"><img class="text-align-center" src="./assets/bullets2.png" alt="Foto staff 1">
+                    <h2>ELEGÍ CÓMO PAGAR</h2>
+                    <p>Podés pagar con tarjeta, débito, efectivo o hasta 12 cuotas sin tarjeta con Serviobras Crédito.</p>
+                    <p>Cómo pagar tus compras</p>
+                </div>
+                <div class="home__bullets--texto"><img class="text-align-center" src="./assets/bullets3.png" alt="Foto staff 1">
+                    <h2>SEGURIDAD, DE PRINCIPIO A FIN</h2>
+                    <p>¿No te gusta? ¡Devolvelo! En Revista Serviobras, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
+                    <p>Cómo te protegemos</p>
+                </div>
         </section>
     </main>
     <footer class="footer">
