--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -55,8 +55,8 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <main class="main__secciones">
-        <article class="main__secciones--texto">
+    <main class="home__secciones">
+        <article class="home__secciones--texto">
             <h1>SOMOS LA GUÍA DE CONSULTA DE LA CONSTRUCCIÓN, PARA QUE TODOS PUEDAN ENCONTRAR LOS PROVEEDORES PARA
                 CONSTRUIR, REMODELAR, DECORAR O EQUIPAR SU CASA</h1>
             <p>Revista Serviobras nación en 2001 como una revista en papel que llevara
@@ -68,7 +68,7 @@
                 que todo esto sea posible. Conocelos un poco más.</p>
         </article>
     </main>
-    <section class="main__secciones">
+    <section class="home__secciones">
         <div class="staff-box">
             <img src="../assets/staff1.png" width="250px" alt="Foto staff 1">
             <h2 class="font-color-rojo text-align-center">CARLA ALDERETE</h2>
